<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/main_bg"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="Select Time Period :"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/month_one"
            >

            <RadioButton
                android:id="@+id/month_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimaryDark"
                android:textColor="#000"
                android:paddingStart="10dp"
                android:textSize="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/one_month" />

            <RadioButton
                android:id="@+id/month_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:paddingStart="10dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:textColor="#000"
                android:text="@string/three_month" />
            <RadioButton
                android:id="@+id/month_six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:paddingStart="10dp"
                android:textColor="#000"
                android:text="@string/six_month" />

            <RadioButton
                android:id="@+id/one_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_marginTop="5dp"
                android:paddingStart="10dp"
                android:textSize="16dp"
                android:textColor="#000"
                android:text="@string/one_year" />
            <RadioButton
                android:id="@+id/custom_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimaryDark"
                android:paddingStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:textColor="#000"
                android:text="@string/custom" />

        </RadioGroup>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>