<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:theme="@style/MaterialTheme"
    tools:context=".UpdateGSTDetails">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp"
    android:background="@drawable/main_bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:text="@string/head_gst"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_button_1"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:text="@string/gst_have" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/c_buss_dont" />

    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvgstNo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/gst_num"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gstNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_bg"
        android:paddingHorizontal="20dp"
        android:text="Add"
        android:textColor="#fff"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />

</LinearLayout>


<!--    <ImageView-->
<!--        android:id="@+id/gstImg"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="20dp"-->
<!--        android:src="@drawable/man"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/gstNo" />-->

</LinearLayout>