<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/MaterialTheme"
    tools:context=".UploadPan">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:elevation="10dp"
        android:background="@drawable/main_bg"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/head_busi"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_button_1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:text="@string/c_buss_have" />

            <RadioButton
                android:id="@+id/radio_button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/c_buss_dont" />

        </RadioGroup>

        <ImageView
            android:id="@+id/PanIV"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/man" />
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/tvfullname"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:hint="@string/pan_num"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_pan"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="number"-->
<!--                />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->
        <Button
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="20dp"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"
            android:textColor="#fff"
            android:background="@drawable/btn_bg"
            android:textStyle="bold"
            android:text="Upload"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:elevation="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/main_bg"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/head_prsnl"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_button_3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:text="@string/prsnl_have" />

            <RadioButton
                android:id="@+id/radio_button_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:text="@string/prsnl_dont" />

        </RadioGroup>

        <ImageView
            android:id="@+id/PanIV1"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/man" />
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/tvpan2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:hint="@string/pan_num"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_pan2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="number"-->
<!--                />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->
        <Button
            android:id="@+id/upload1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="20dp"
            android:textSize="16dp"
            android:textColor="#fff"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_bg"
            android:textStyle="bold"
            android:text="Upload"
            />
    </LinearLayout>


</LinearLayout>