<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MaterialTheme"
    android:orientation="vertical"
    tools:context=".UploadAAdhar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/head_aadhar"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/main_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_front_aadhar"
            android:layout_margin="10dp"
            android:textSize="16dp"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/aadharFrontIV"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/man" />
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:background="?android:attr/listDivider" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_back_aadhar"
            android:layout_margin="10dp"
            android:textSize="16dp"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/adharbackView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/man" />
        <Button
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="20dp"
            android:textSize="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:textColor="#fff"
            android:background="@drawable/btn_bg"
            android:textStyle="bold"
            android:text="Upload"
            />



    </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="vertical">-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_margin="10dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintTop_toTopOf="parent">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical">-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:padding="10dp"-->
<!--                        android:text="Front View" />-->

<!--                    <ImageView-->
<!--                        android:id="@+id/aadharFrontIV"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:src="@drawable/man" />-->
<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->
<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="10dp"-->
<!--                app:layout_constraintTop_toTopOf="parent">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical">-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:padding="10dp"-->
<!--                        android:text="Back View" />-->

<!--                    <ImageView-->
<!--                        android:id="@+id/adharbackView"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->

<!--                        android:src="@drawable/man" />-->
<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->
<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/upload"-->
<!--                android:layout_margin="5dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:text="Upload"/>-->
<!--        </LinearLayout>-->

</LinearLayout>